# searxng_client

./: Cargo.toml  LICENSE  README.md
src/: client.rs  lib.rs  response.rs  test.rs
test_data/: failedResponse_20260328.json
