[package]
name = "searxng-client"
version = "0.1.0"
edition = "2024"
authors = ["vintcessun"]
license = "MIT"
description = "A high-performance, type-safe asynchronous SearXNG API client for Rust."
repository = "https://github.com/vintcessun/searxng_client"
readme = "README.md"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
iso8601 = { version = "0.6.3", features = ["chrono", "serde"] }
language-tags = { version = "0.3.2", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
smallvec = { version = "1.15.1", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.101"
